force-app/main/default/objects/custom_create207__c/custom_create207__c.object-meta.xml
<CustomObject>
    <label>Custom created object207</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects207</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>