force-app/main/default/objects/custom_create207__c/fields/custom_create_207field503__c.field-meta.xml
<CustomField>
    <fullName>custom_create_207field503__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 207field503</label>
    <type>Checkbox</type>
</CustomField>